@@ -1,12 +1,15 @@
 module Wrath
 class Tree < StaticObject
+  def can_wake?; @can_wake; end # Can wake to become an ent.
+
   def initialize(options = {})
     options = {
-      factor: 1.5,
       shape: :circle,
-      animation: "tree_8x8.png"
+      animation: "tree_12x12.png",
+      can_wake: false,
     }.merge! options
 
+    @can_wake = options[:can_wake]
     super options
   end
 end
